feat(pagination): Create basic paginator
